fixed python appearing twice in skills section

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <!--<img src="assets/img/pngfind.com-mysql-logo-transparent-png-744402.png" alt="" class="java__img">-->
-                                        <h3 class="skills__name">Python</h3>
+                                        <h3 class="skills__name">Java</h3>
                                     </div>
                                 </div>
                             </div>
