--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                 <span class="qualification__subtitle">Esri</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    May 2022 - Present
+                                    May 2022 - July 2022
                                 </div>
                             </div>
 
